--- a/cn-resume.html
+++ b/cn-resume.html
@@ -908,14 +908,14 @@
       <h3 class="hidden-mobile" style="display:inline-block">博士毕业典礼</h3>
       <div class="video-container hidden-mobile" style="padding-bottom: 48.25%">
         <video controls poster="images/graduation_preview_min.png">
-          <source src="/images/Graduation_Ceremony_25MB.mp4" type="video/mp4">
+          <source src="/images/Graduation_Ceremony_25MB.mp4" type="video/mp4" style="width: 100%; height: auto;">
           Your browser does not support the video tag.
         </video>
       </div>
 
       <div class="video-container display-mobile" style="width:113%;padding-bottom: 55.25%;">
         <video controls poster="images/graduation_preview.png">
-          <source src="/images/Graduation_Ceremony_25MB.mp4" type="video/mp4">
+          <source src="/images/Graduation_Ceremony_25MB.mp4" type="video/mp4" style="width: 100%; height: auto;">
           Your browser does not support the video tag.
         </video>
       </div>
