--- a/jp.html
+++ b/jp.html
@@ -557,12 +557,12 @@
       <p class="display-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">欧州時間</a></strong>
+            title="timezone - Zurich" target="_blank" rel="nofollow">パリ時間</a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
               id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">中国時間</a></strong>
+              title="Time - Beijing" target="_blank" rel="nofollow">北京時間</a></strong>
           <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         </span>
       </p>
@@ -570,12 +570,12 @@
       <p class="hidden-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">欧州時間 [CET] </a></strong>
+            title="World Clock :: Zurich" target="_blank" rel="nofollow">パリ時間 [CET] </a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
               id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="actual time Beijing" target="_blank" rel="nofollow">中国時間 [CST] </a></strong>
+              title="actual time Beijing" target="_blank" rel="nofollow">北京時間 [CST] </a></strong>
           <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         </span>
       </p>
