--- a/kr.html
+++ b/kr.html
@@ -582,12 +582,12 @@
       <p class="hidden-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">유럽 시간 [CET] </a></strong>
+            title="World Clock :: Zurich" target="_blank" rel="nofollow">파리 시간 [CET] </a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
               id="tz24-1658678453-c133-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-              title="actual time Beijing" target="_blank" rel="nofollow">베이징 시간 [CST] </a></strong>
+              title="actual time Beijing" target="_blank" rel="nofollow">북경 시간 [CST] </a></strong>
           <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         </span>
       </p>
@@ -596,12 +596,12 @@
       <p class="display-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">유럽</a></strong>
+            title="timezone - Zurich" target="_blank" rel="nofollow">파리 시간</a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
               id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">베이징</a></strong>
+              title="Time - Beijing" target="_blank" rel="nofollow">북경 시간</a></strong>
           <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         </span>
       </p>
