--- a/it.html
+++ b/it.html
@@ -599,7 +599,7 @@
       <p class="hidden-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">Ora dell'Europa [CET] </a></strong>
+            title="World Clock :: Zurich" target="_blank" rel="nofollow">Ora di Roma [CET] </a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
@@ -613,7 +613,7 @@
       <p class="display-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">Europa</a></strong>
+            title="timezone - Zurich" target="_blank" rel="nofollow">Roma</a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
