--- a/ru.html
+++ b/ru.html
@@ -579,7 +579,7 @@
       <p class="hidden-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658678414-c1268-eyJob3VydHlwZSI6MTIsInNob3dkYXRlIjoiMCIsInNob3dzZWNvbmRzIjoiMSIsInNob3d0aW1lem9uZSI6IjAiLCJ0eXBlIjoiZCIsImxhbmciOiJlbiJ9"
-            title="World Clock :: Zurich" target="_blank" rel="nofollow">Европейское время [CET] </a></strong>
+            title="World Clock :: Zurich" target="_blank" rel="nofollow">Парижское время [CET] </a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
@@ -593,12 +593,12 @@
       <p class="display-mobile" style="text-align:left;">
         <strong><a href="//24timezones.com/Zurich/time" style="text-decoration: none" class="clock24"
             id="tz24-1658714807-c1268-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-            title="timezone - Zurich" target="_blank" rel="nofollow">Европа</a></strong>
+            title="timezone - Zurich" target="_blank" rel="nofollow">Париж </a></strong>
         <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         <span style="float:right;">
           <strong><a href="//24timezones.com/Beijing/time" style="text-decoration: none" class="clock24"
               id="tz24-1658714942-c133-eyJob3VydHlwZSI6IjEyIiwic2hvd2RhdGUiOiIwIiwic2hvd3NlY29uZHMiOiIxIiwic2hvd3RpbWV6b25lIjoiMCIsInR5cGUiOiJkIiwibGFuZyI6ImVuIn0="
-              title="Time - Beijing" target="_blank" rel="nofollow">Пекин</a></strong>
+              title="Time - Beijing" target="_blank" rel="nofollow">Пекин </a></strong>
           <script type="text/javascript" src="//w.24timezones.com/l.js" async></script>
         </span>
       </p>
