--- a/kr.html
+++ b/kr.html
@@ -294,7 +294,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
           <div style="margin-bottom: 13px;"></div>
           <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
                   재생에너지</rt></ruby></small></h3>
