--- a/de.html
+++ b/de.html
@@ -283,7 +283,7 @@
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img id="optionalstuff" src="images/hong8.png" width="155" />
+          <img id="optionalstuff" src="images/banner_cns3_left.gif" width="155" />
           <div style="margin-bottom: 18px;"></div>
           <h3 class="hidden-mobile" align="left">Dr. Hong Xü</h3>
 
