--- a/cn.html
+++ b/cn.html
@@ -219,8 +219,9 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_cn3.gif" style="margin-top: -10px; max-width: 113%;" />
-    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
+    <img class="display-mobile" src="images/banner_mobile_cn3.gif"
+      style="margin-top: -10px; width: 100%; max-width: 100%;" />
+    <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%;"></div>
   </div>
 
 
