update for ipad mini display 768px

--- a/cn.html
+++ b/cn.html
@@ -153,7 +153,36 @@
           <span class='name'>摄影</span>
         </a>
       </div>
-
+      <div>
+        <a class='slide' href='mailto:h.xu@tum.de'>
+          <span class='element'>Em&nbsp;&nbsp;</span>
+          <span class='name'>邮件</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
+          <span class='element'>In&nbsp;&nbsp;</span>
+          <span class='name'>领英</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='https://www.zhihu.com/people/dr.of.nothing'>
+          <span class='element'>Zh&nbsp;&nbsp;</span>
+          <span class='name'>知乎</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Tw&nbsp;&nbsp;</span>
+          <span class='name'>推特</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
+          <span class='element'>Sc&nbsp;&nbsp;</span>
+          <span class='name'>学者</span>
+        </a>
+      </div>
     </div>
   </nav>
 
