--- a/cn-research.html
+++ b/cn-research.html
@@ -310,7 +310,8 @@
 
     <!-- Delete everything in this .container and get started on your own site! -->
     <div class="display-mobile" style="position: relative">
-        <img class="display-mobile" src="images/banner_mobile_cn4.gif" style="margin-top: -10px; max-width: 113%;" />
+        <img class="display-mobile" src="images/banner_mobile_cn4.gif"
+            style="margin-top: -10px; width: 113%; max-width: 113%;" />
     </div>
 
 
