--- a/ar-activities.html
+++ b/ar-activities.html
@@ -284,7 +284,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ar6.gif" style="margin-top: -10px; max-width: 100%;" />
+    <img class="display-mobile" src="images/banner_mobile_ar6.gif"
+      style="margin-top: -10px; width: 113%;max-width: 100%;" />
     <div class="red-dot" alt="Munich" style="position: absolute; top: 19%; left: 60.7%; max-width: 113%;"></div>
   </div>
   <div class="container">
