--- a/ar-research.html
+++ b/ar-research.html
@@ -284,7 +284,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ar4.gif" style="margin-top: -10px; max-width: 100%;" />
+    <img class="display-mobile" src="images/banner_mobile_ar4.gif"
+      style="margin-top: -10px; width: 113%;max-width: 100%;" />
   </div>
   <div class="container">
 
