--- a/ar-resume.html
+++ b/ar-resume.html
@@ -284,7 +284,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ar5.gif" style="margin-top: -10px; max-width: 100%;" />
+    <img class="display-mobile" src="images/banner_mobile_ar5.gif"
+      style="margin-top: -10px; width: 113%; max-width: 100%;" />
     <div class="red-dot" alt="Munich" style="position: absolute; top: 27%; left: 52.2%; max-width: 113%;"></div>
   </div>
 
