--- a/de-activities.html
+++ b/de-activities.html
@@ -320,7 +320,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_de6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <img class="display-mobile" src="images/banner_mobile_de6.gif"
+      style="margin-top: -10px; width: 113%;max-width: 113%;" />
     <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
   </div>
 
