--- a/de.html
+++ b/de.html
@@ -252,7 +252,30 @@
           <span class='name'>Scholar</span>
         </a>
       </div>
-
+      <div>
+        <a class='slide' href='de-contact.html'>
+          <span class='element'>K</span>
+          <span class='name'>Kontakt</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
+          <span class='element'>In</span>
+          <span class='name'>LinkedIn</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
+          <span class='element'>Em</span>
+          <span class='name'>Email</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
+          <span class='element'>Sc</span>
+          <span class='name'>Scholar</span>
+        </a>
+      </div>
 
     </div>
   </nav>
