--- a/cn-research.html
+++ b/cn-research.html
@@ -179,54 +179,6 @@
                 </a>
             </div>
             <div>
-                <a class='slide' href='cn-resume.html#education-mobile'>
-                    <span class='element'>Ed&nbsp;&nbsp;</span>
-                    <span class='name'>教育</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href='cn-research.html'>
-                    <span class='element'>Re&nbsp;&nbsp;</span>
-                    <span class='name'>研究</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href='cn-research.html#publications'>
-                    <span class='element'>Pb&nbsp;&nbsp;</span>
-                    <span class='name'>论文</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href='cn-resume.html#awards'>
-                    <span class='element'>Ad&nbsp;&nbsp;</span>
-                    <span class='name'>荣誉</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href='cn-contact.html'>
-                    <span class='element'>C&nbsp;&nbsp;&nbsp;</span>
-                    <span class='name'>联系</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-                    <span class='element'>In&nbsp;&nbsp;</span>
-                    <span class='name'>领英</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-                    <span class='element'>Em&nbsp;&nbsp;</span>
-                    <span class='name'>邮件</span>
-                </a>
-            </div>
-            <div>
-                <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-                    <span class='element'>Sc&nbsp;&nbsp;</span>
-                    <span class='name'>学者</span>
-                </a>
-            </div>
-            <div>
                 <a class='slide' href='mailto:h.xu@tum.de'>
                     <span class='element'>Em&nbsp;&nbsp;</span>
                     <span class='name'>邮件</span>
@@ -254,6 +206,54 @@
                 <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
                     <span class='element'>Sc&nbsp;&nbsp;</span>
                     <span class='name'>学者</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href="#" target="_blank">
+                    <span class='element'>Gt&nbsp;&nbsp;</span>
+                    <span class='name'>GITHUB</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href="#" target="_blank">
+                    <span class='element'>Is&nbsp;&nbsp;</span>
+                    <span class='name'>INSTA</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href="https://photo.h-xu.com" target="_blank">
+                    <span class='element'>Ph&nbsp;&nbsp;</span>
+                    <span class='name'>摄影</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href='#'>
+                    <span class='element'>Wb&nbsp;&nbsp;</span>
+                    <span class='name'>微博</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href='#'>
+                    <span class='element'>Wx&nbsp;&nbsp;</span>
+                    <span class='name'>微信</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href='#'>
+                    <span class='element'>Dy&nbsp;&nbsp;</span>
+                    <span class='name'>抖音</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href='#'>
+                    <span class='element'>Xh&nbsp;&nbsp;</span>
+                    <span class='name'>小红书</span>
+                </a>
+            </div>
+            <div>
+                <a class='slide' href='#'>
+                    <span class='element'>BL&nbsp;&nbsp;</span>
+                    <span class='name'>哔哩</span>
                 </a>
             </div>
         </div>
