--- a/cn.html
+++ b/cn.html
@@ -143,7 +143,7 @@
       </div>
       <div>
         <a class='slide' href="#" target="_blank">
-          <span class='element'>It&nbsp;&nbsp;</span>
+          <span class='element'>Is&nbsp;&nbsp;</span>
           <span class='name'>INSTA</span>
         </a>
       </div>
@@ -154,33 +154,33 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='mailto:h.xu@tum.de'>
-          <span class='element'>Em&nbsp;&nbsp;</span>
-          <span class='name'>邮件</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In&nbsp;&nbsp;</span>
-          <span class='name'>领英</span>
-        </a>
-      </div>
-      <div>
-        <a class='slide' href='https://www.zhihu.com/people/dr.of.nothing'>
-          <span class='element'>Zh&nbsp;&nbsp;</span>
-          <span class='name'>知乎</span>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>微博</span>
         </a>
       </div>
       <div>
         <a class='slide' href='#'>
-          <span class='element'>Tw&nbsp;&nbsp;</span>
-          <span class='name'>推特</span>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>微信</span>
         </a>
       </div>
       <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc&nbsp;&nbsp;</span>
-          <span class='name'>学者</span>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>抖音</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>小红书</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>BL&nbsp;&nbsp;</span>
+          <span class='name'>哔哩</span>
         </a>
       </div>
     </div>
