--- a/ar-contact.html
+++ b/ar-contact.html
@@ -264,7 +264,36 @@
           <span class='name'>Scholar</span>
         </a>
       </div>
-
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>Weibo</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>Wechat</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>Tiktok</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>XiaoHS</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Bi&nbsp;&nbsp;</span>
+          <span class='name'>Bilibili</span>
+        </a>
+      </div>
 
     </div>
   </nav>
@@ -285,7 +314,7 @@
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
     <img class="display-mobile" src="images/banner_mobile_ar2.gif"
-      style="margin-top: -10px; width: 113%;max-width: 100%;" />
+      style="margin-top: -10px; width: 113%;max-width: 113%;" />
     <!-- <div class="red-dot" alt="Munich" style="position: absolute; top: 20%; left: 54.7%; max-width: 100%;"></div> -->
   </div>
 
