--- a/cn.html
+++ b/cn.html
@@ -243,7 +243,7 @@
 
   <!-- partial:index.partial.html -->
 
-  <!-- Primary Page Layout
+  <!-- Primary Page Layout class="image sharpen-ipad-mini"
   ================================================== -->
 
   <!-- Delete everything in this .container and get started on your own site! -->
