--- a/de.html
+++ b/de.html
@@ -253,27 +253,33 @@
         </a>
       </div>
       <div>
-        <a class='slide' href='de-contact.html'>
-          <span class='element'>K</span>
-          <span class='name'>Kontakt</span>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>Weibo</span>
         </a>
       </div>
       <div>
-        <a class='slide' href="https://www.linkedin.com/in/xuhong/" target="_blank">
-          <span class='element'>In</span>
-          <span class='name'>LinkedIn</span>
+        <a class='slide' href='#'>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>Wechat</span>
         </a>
       </div>
       <div>
-        <a class='slide' href="mailto:h.xu@tum.de" target="_blank">
-          <span class='element'>Em</span>
-          <span class='name'>Email</span>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>Tiktok</span>
         </a>
       </div>
       <div>
-        <a class='slide' href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank">
-          <span class='element'>Sc</span>
-          <span class='name'>Scholar</span>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>XiaoHS</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Bi&nbsp;&nbsp;</span>
+          <span class='name'>Bilibili</span>
         </a>
       </div>
 
