--- a/es-activities.html
+++ b/es-activities.html
@@ -300,7 +300,36 @@
           <span class='name'>Scholar</span>
         </a>
       </div>
-
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>Weibo</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>Wechat</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>Tiktok</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>XiaoHS</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Bi&nbsp;&nbsp;</span>
+          <span class='name'>Bilibili</span>
+        </a>
+      </div>
 
     </div>
   </nav>
@@ -321,7 +350,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_es6.gif" style="margin-top: -10px; max-width: 113%;" />
+    <img class="display-mobile" src="images/banner_mobile_es6.gif"
+      style="margin-top: -10px; width: 113%; max-width: 113%;" />
     <div class="red-dot" alt="Munich" style="position: absolute; top: 18.3%; left: 68.3%; max-width: 113%;"></div>
   </div>
 
