--- a/jp.html
+++ b/jp.html
@@ -252,7 +252,36 @@
           <span class='name'>学者</span>
         </a>
       </div>
-
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>微博</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>微信</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>抖音</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>小紅書</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Bi&nbsp;&nbsp;</span>
+          <span class='name'>嗶哩</span>
+        </a>
+      </div>
     </div>
   </nav>
 
@@ -274,7 +303,7 @@
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
     <img class="display-mobile" src="images/banner_mobile_jp3.gif" width="800"
-      style="margin-top: -10px; max-width: 113%;">
+      style="margin-top: -10px; width: 113%; max-width: 113%;">
     <div class="red-dot" alt="Munich" style="position: absolute; top: 20.3%; left: 61.7%; max-width: 113%;"></div>
   </div>
 
