--- a/ru-research.html
+++ b/ru-research.html
@@ -246,6 +246,36 @@
           <span class='name'>Контакт</span>
         </a>
       </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wb&nbsp;&nbsp;</span>
+          <span class='name'>Вейбо</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Wx&nbsp;&nbsp;</span>
+          <span class='name'>Вичат</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Dy&nbsp;&nbsp;</span>
+          <span class='name'>Тик Ток</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Xh&nbsp;&nbsp;</span>
+          <span class='name'>Красная книга</span>
+        </a>
+      </div>
+      <div>
+        <a class='slide' href='#'>
+          <span class='element'>Bi&nbsp;&nbsp;</span>
+          <span class='name'>Билибили</span>
+        </a>
+      </div>
     </div>
   </nav>
 
@@ -265,7 +295,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_ru4.gif" style="margin-top: -10px; max-width: 113%;" />
+    <img class="display-mobile" src="images/banner_mobile_ru4.gif"
+      style="margin-top: -10px; width: 113%; max-width: 113%;" />
   </div>
   <div class="container">
 
