--- a/en-research.html
+++ b/en-research.html
@@ -273,7 +273,8 @@
 
   <!-- Delete everything in this .container and get started on your own site! -->
   <div class="display-mobile" style="position: relative">
-    <img class="display-mobile" src="images/banner_mobile_en4.gif" style="margin-top: -10px; max-width: 113%;" />
+    <img class="display-mobile" src="images/banner_mobile_en4.gif"
+      style="margin-top: -10px; width: 113%; max-width: 113%;" />
   </div>
 
   <div class="container">
