--- a/ar.html
+++ b/ar.html
@@ -423,6 +423,9 @@
         </div>
       </div>
 
+      <p class="hidden-mobile" style="margin: -12px 0 0 0; padding: 0; height: 0px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile" style="text-align: right;">مرحبا أهلا وسهلا <small><small><small> أصدقاء من <span
                 id="location">العالم</span>
