--- a/cn-activities.html
+++ b/cn-activities.html
@@ -384,6 +384,7 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
 
       </div>
+      <p class="hidden-mobile" style="margin: -8px 0 0 0; padding: 0; height: 0px;"></p>
 
 
       <p class="hidden-mobile"></p>
@@ -425,7 +426,12 @@
       <p class="display-mobile"></p>
 
 
+
+
+
       <div class="topnav">
+
+
 
 
         <a href="cn-activities.html" class="active">
@@ -499,6 +505,9 @@
           </a></strong>
 
       </div>
+
+
+
 
       <p class="display-mobile" style="text-align:left;margin-bottom:20px;">
         <text style="color:rgb(237, 118, 7);font-size:15px;">➔ 兴趣爱好 </text>
