--- a/cn-contact.html
+++ b/cn-contact.html
@@ -469,6 +469,7 @@
 
       </div>
 
+      <p class="hidden-mobile" style="margin: -3px 0 0 0; padding: 0; height: 0px;"></p>
 
       <p class="hidden-mobile"></p>
       <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
