--- a/cn-resume.html
+++ b/cn-resume.html
@@ -383,6 +383,7 @@
       </div>
 
 
+      <p class="hidden-mobile" style="margin: -9px 0 0 0; padding: 0; height: 0px;"></p>
 
 
       <p class="hidden-mobile"></p>
