--- a/cn.html
+++ b/cn.html
@@ -386,7 +386,7 @@
       </div>
 
 
-      <p class="hidden-mobile"></p>
+      <p class="hidden-mobile" style="margin: 0; padding: 0; height: 8px;"></p>
       <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
       <h3 class="hidden-mobile">
         <span><ruby>嗨，你好!<rt><text style="color:rgb(255, 255, 255)">Hi，Nǐ Hǎo！</text></rt></ruby> <ruby>
