--- a/de-activities.html
+++ b/de-activities.html
@@ -400,6 +400,10 @@
         <img src="images/banner_de6.gif" width="800" alt="banner Image" />
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 4px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Freizeitaktivitäten<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
