--- a/de-contact.html
+++ b/de-contact.html
@@ -413,6 +413,10 @@
         </div> -->
 
       </div>
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Servus! Grüezi! <small><small><small> Freunde aus <span id="location">aller Welt</span>
               :-)</small></small> </small>
