--- a/de-resume.html
+++ b/de-resume.html
@@ -352,6 +352,10 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
 
       </div>
+
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 4px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Lebenslauf<small><small><small></small></small> </small>
         <span style="float:right;font-family:verdana;">
