--- a/en-contact.html
+++ b/en-contact.html
@@ -384,6 +384,8 @@
         </div> -->
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Hey, Welcome! <small><small><small>Friends from <span id="location">the World</span>
