--- a/en-research.html
+++ b/en-research.html
@@ -325,6 +325,9 @@
         <img src="images/banner_en4.gif" style="width: 100%;margin-bottom: 1px;" alt="banner Image" />
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
+
+
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Research Progress <small><small><small>「Science without borders」</small></small>
         </small>
