--- a/es-research.html
+++ b/es-research.html
@@ -351,6 +351,7 @@
         <img src="images/banner_es4.gif" width="800" alt="banner Image" />
 
       </div>
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
 
 
       <p class="hidden-mobile"></p>
