--- a/es-resume.html
+++ b/es-resume.html
@@ -353,6 +353,7 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
 
       </div>
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 4px;"></p>
 
 
       <p class="hidden-mobile"></p>
