--- a/fr-activities.html
+++ b/fr-activities.html
@@ -416,6 +416,8 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Activités parascolaires<small><small><small></small></small> </small>
