--- a/fr-research.html
+++ b/fr-research.html
@@ -364,6 +364,8 @@
 
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Progrès de la recherche<small><small><small>「Science sans frontières」</small></small>
