--- a/it-contact.html
+++ b/it-contact.html
@@ -438,6 +438,7 @@
           <p>2019-21 QSB MBA</p>
         </div> -->
       </div>
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
 
 
       <p class="hidden-mobile"></p>
