--- a/it.html
+++ b/it.html
@@ -448,6 +448,7 @@
           <p>2019-21 QSB MBA</p>
         </div>
       </div>
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 2px;"></p>
 
 
       <p class="hidden-mobile"></p>
