--- a/jp-activities.html
+++ b/jp-activities.html
@@ -417,6 +417,8 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 19.3%; left: 60.6%; z-index: 9999;"></div>
       </div>
 
+      <p class="hidden-mobile" style="margin: -3px 0 0 0; padding: 0; height: 0px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
