--- a/jp-contact.html
+++ b/jp-contact.html
@@ -412,6 +412,7 @@
         </div> -->
       </div>
 
+      <p class="hidden-mobile" style="margin: -3px 0 0 0; padding: 0; height: 0px;"></p>
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
