--- a/jp-research.html
+++ b/jp-research.html
@@ -352,6 +352,7 @@
 
       </div>
 
+      <p class="hidden-mobile" style="margin: -7px 0 0 0; padding: 0; height: 0px;"></p>
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
