--- a/kr-activities.html
+++ b/kr-activities.html
@@ -364,14 +364,25 @@
   </div>
   <div class="container">
 
+
+
+
+
+
+
+
+
+    <!-- Sidebar -->
+
     <!-- Sidebar -->
     <div class="hidden-mobile" class="three columns sidebar">
       <nav>
         <h3 id="logo" style="text-align:center;">
-          <img class="hidden-mobile" src="images/banner_cns6_left.gif" width="155" />
+          <img id="optionalstuff" src="images/banner_cns6_left.gif" width="155" />
           <div style="margin-bottom: 13px;"></div>
           <h3 class="hidden-mobile" align="left"><ruby>徐<rt>쉬</rt></ruby> <ruby>泓<rt>홍</rt></ruby> <small><ruby>박 사<rt>
                   재생에너지</rt></ruby></small></h3>
+
           <ul>
             <span style="display: block; height: 4px;"></span>
             <li><a href="#"> <span class='blue'>연구원</span> :: <span class='blue'>엔지니어</span> :: <span
@@ -396,6 +407,8 @@
       </nav>
 
     </div>
+
+
 
 
     <!-- Content -->
