--- a/cn-research.html
+++ b/cn-research.html
@@ -439,6 +439,7 @@
 
 
 
+            <p class="hidden-mobile" style="margin: -4px 0 0 0; padding: 0; height: 0px;"></p>
 
             <p class="hidden-mobile"></p>
             <!--<h3 class="hidden-mobile"><ruby>简<rt><text style="color:rgb(255, 255, 255)">かん</text></rt></ruby> <ruby>介<rt><text style="color:rgb(255, 255, 255)">かい</text> </rt></ruby>-->
