--- a/de-research.html
+++ b/de-research.html
@@ -349,6 +349,7 @@
       <div class="image-wrapper hidden-mobile">
         <img src="images/banner_de4.gif" width="800" alt="banner Image" />
 
+        <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 3px;"></p>
 
       </div>
       <p class="hidden-mobile"></p>
