--- a/fr-contact.html
+++ b/fr-contact.html
@@ -444,6 +444,8 @@
         </div> -->
       </div>
 
+      <p class="hidden-mobile" style="margin: 0px 0 0 0; padding: 0; height: 5px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">Bonjour! Salut! <small><small><small> Bienvenue aux amis <span id="location">du
