--- a/jp-resume.html
+++ b/jp-resume.html
@@ -366,6 +366,8 @@
         <div class="orange-dot-eth" alt="Munich" style="top: 12.3%; left: 52.2%; z-index: 9999;"></div>
       </div>
 
+      <p class="hidden-mobile" style="margin: -5px 0 0 0; padding: 0; height: 0px;"></p>
+
 
       <p class="hidden-mobile"></p>
       <h3 class="hidden-mobile">
